--- a/.github/workflows/generate_sitemap.yml
+++ b/.github/workflows/generate_sitemap.yml
@@ -1,37 +1,33 @@
 name: Generate Sitemap
 
 on:
-  schedule:
-    - cron: '0 0 * * *' # Runs every day at midnight
   push:
     branches:
       - main
 
 jobs:
-  build:
+  generate-sitemap:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Node.js
+    - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '18'
+        node-version: '14'
 
     - name: Install dependencies
       run: npm install
 
-    - name: Generate sitemap.xml
+    - name: Generate sitemap
       run: npm run generate-sitemap
 
-    - name: Commit and push changes
+    - name: Commit sitemap.xml
       run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
         git add sitemap.xml
-        git commit -m 'chore: update sitemap.xml'
+        git commit -m "Generate sitemap.xml"
         git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
